# music-library-interface

./: .env  .gitignore  Cargo.toml
data/: db.sqlite3
migrations/2023-03-06-123010_initial_scheme/: down.sql  up.sql
migrations/2023-03-25-180431_playlists/: down.sql  up.sql
src/: lib.rs  schema.rs
src/db/: mod.rs  track.rs
src/filesys/: crawler.rs  id3tags.rs  lib_iter.rs  mod.rs  utils.rs
src/models/: mod.rs  playlist.rs  track.rs
src/tests/: db.rs
