[package]
name = "music-library-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.6"
glob = "0.3.1"
id3 = "1.6.0"
lazy_static = "1.4.0"
metadata = "0.1.7"
once_cell = "1.17.1"
regex = "1.7.1"
