[package]
name = "music-library-interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.10", features = ["derive"] }
clap_generate = "3.0.3"
diesel = { version = "2.0.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15.6"
glob = "0.3.1"
id3 = "1.6.0"
lazy_static = "1.4.0"
metadata = "0.1.7"
once_cell = "1.17.1"
regex = "1.7.1"
